fixed the z-index for the overlapping on the front page EFF YEAH

--- a/chazelle/static/less/hunt_theme.less
+++ b/chazelle/static/less/hunt_theme.less
@@ -134,6 +134,7 @@ body {
             &#rounds {
                 li img, li .no-image {
                     height: 416px;
+                    position: relative;
                 }
 
                 #oceans_11 img {
@@ -143,12 +144,12 @@ body {
 
                 #feynman img {
                     margin-left: -45px;
-                    z-index: 3;
+                    z-index: 4;
                 }
 
                 #get_smart img {
                     margin-left: -20px;
-                    z-index: 1;
+                    z-index: 2;
                 }
 
                 #agent_99 img {
@@ -158,12 +159,12 @@ body {
 
                 #indiana img {
                     margin-left: -35px;
-                    z-index: 2;
+                    z-index: 3;
                 }
 
                 #sneakers img {
                     margin-left: -10px;
-                    z-index: 1;
+                    z-index: 5;
                 }
             }
         }
